# QtNic

./: CMakeLists.txt  README.md
src/: main.cpp  main_window.cpp  main_window.h  main_window.ui  nic.cpp  nic.h  nic_widget.cpp  nic_widget.h  nic_widget.ui  utf8.h
